<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.juan.apppunto3.MainActivity"
    android:background="@color/gray"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/i_numero"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/tNumero"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titulo"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/tResultado"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:onClick="guardar"
                    android:text="@string/n_siete"
                    android:id="@+id/bNumero7"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:onClick="guardar"
                    android:text="@string/n_ocho"
                    android:id="@+id/bNumero8"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:onClick="guardar"
                    android:text="@string/n_nueve"
                    android:id="@+id/bNumero9"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:onClick="guardar"
                    android:text="@string/n_division"
                    android:id="@+id/bNumerodiv"
                    />
            </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_cuatro"
                android:id="@+id/bNumero4"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_cinco"
                android:id="@+id/bNumero5"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_seis"
                android:id="@+id/bNumero6"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_multiplicacion"
                android:id="@+id/bNumeromult"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_uno"
                android:id="@+id/bNumero1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_dos"
                android:id="@+id/bNumero2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_tres"
                android:id="@+id/bNumero3"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_resta"
                android:id="@+id/bNumeromenos"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:onClick="guardar"
                    android:text="@string/n_punto"
                    android:id="@+id/bNumeropunto"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:onClick="guardar"
                    android:text="@string/n_AC"
                    android:id="@+id/bNumeroAC"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_cero"
                android:id="@+id/bNumero0"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_igual"
                android:id="@+id/bNumeroigual"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="guardar"
                android:text="@string/n_suma"
                android:id="@+id/bNumeromas"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
